@@ -138,7 +138,7 @@ lookup_partial_symtab (struct objfile *objfile, const char *name,
 
   ALL_OBJFILE_PSYMTABS_REQUIRED (objfile, pst)
   {
-    if (FILENAME_CMP (name, pst->filename) == 0)
+    if (gdb_filename_cmp (name, pst->filename) == 0)
       {
 	return (pst);
       }
@@ -155,7 +155,7 @@ lookup_partial_symtab (struct objfile *objfile, const char *name,
       {
 	psymtab_to_fullname (pst);
 	if (pst->fullname != NULL
-	    && FILENAME_CMP (full_path, pst->fullname) == 0)
+	    && gdb_filename_cmp (full_path, pst->fullname) == 0)
 	  {
 	    return pst;
 	  }
@@ -170,7 +170,7 @@ lookup_partial_symtab (struct objfile *objfile, const char *name,
             rp = gdb_realpath (pst->fullname);
             make_cleanup (xfree, rp);
           }
-	if (rp != NULL && FILENAME_CMP (real_path, rp) == 0)
+	if (rp != NULL && gdb_filename_cmp (real_path, rp) == 0)
 	  {
 	    return pst;
 	  }
@@ -1135,6 +1135,8 @@ psymtab_to_fullname (struct partial_symtab *ps)
   if (r >= 0)
     {
       close (r);
+      /* Resolve gratuitous ./ and /../ before returning */
+      gdb_cleanup_frankenpath (ps->fullname);
       return ps->fullname;
     }
 
